8/12,html開頭code整理，假單審核js還沒處理完

--- a/admin/adminMainPage.html
+++ b/admin/adminMainPage.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>祐肯請假系統</title>
-		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <title>祐肯請假系統</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
-		<script src="../js/adminMain.js"></script>
-		<img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;">
+        <img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;">
 		<link rel="stylesheet" href="../css/admin.css">
 	</head>
     <body>
@@ -32,8 +32,7 @@
 			<button class="button">休假行事曆</button>
 		</a>
 		<div id="version">
-            <p>Version: Alpha 0.1.0</p>
-            <p>system builder : 章凱昱 吳岱威</p>
-        </div>
+			<p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
+		</div>
     </body>
 </html>
