--- a/employee/請假.html
+++ b/employee/請假.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="../css/newDayoff.css">
-		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <title>祐肯請假系統</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
-		<title>祐肯請假系統</title>
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
+        <img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;">
+		<link rel="stylesheet" href="../css/newDayoff.css"> 
 		<script src="../js/newDayoffPage.js"></script>
 	</head>
 	
@@ -67,6 +68,9 @@
 		<a href="../employee/employee.html">
 			<button id="back">返回</button>
 		</a>
+		<div id="version">
+			<p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
+		</div>
 	</body>
 
 </html>
