--- a/admin/休假行事曆.html
+++ b/admin/休假行事曆.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>祐肯請假系統</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
@@ -96,8 +97,7 @@
              </a>
         </div>
         <div id="version">
-            <p>Version: Alpha 0.1.0</p>
-            <p>system builder : 章凱昱 吳岱威</p>
+            <p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
         </div>
     </body>
 </html>
