--- a/admin/員工請假資訊.html
+++ b/admin/員工請假資訊.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>祐肯請假系統</title>
-		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
@@ -80,8 +81,7 @@
             </table>
         </div>
         <div id="version">
-            <p>Version: Alpha 0.1.0</p>
-            <p>system builder : 章凱昱 吳岱威</p>
+            <p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
         </div>
     </body>
 </html>
