--- a/admin/員工資料維護.html
+++ b/admin/員工資料維護.html
@@ -2,12 +2,13 @@
 <html>
     <head>
         <title>祐肯請假系統</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
-        <img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;"> 
+        <img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;">
         <link rel="stylesheet" href="../css/員工資料維護.css">
         <script src="../js/新增員工.js"></script>
     </head>
@@ -29,8 +30,7 @@
             <button id="confirm"  class="cpw">確認</button>
         </div>
         <div id="version">
-            <p>Version: Alpha 0.1.0</p>
-            <p>system builder : 章凱昱 吳岱威</p>
+            <p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
         </div>
     </body>
 </html>
