--- a/employee/打卡.html
+++ b/employee/打卡.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<title>祐肯請假系統</title>
-		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <title>祐肯請假系統</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
+        <img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;">
+        <link rel="stylesheet" href="../css/打卡.css">
     </head>
 
     <body>
+        <h1>打卡</h1>
         <div id="start_work">
             <button>上班打卡</button>
         </div>
@@ -19,5 +23,8 @@
         <a href="../employee/employee.html">
 			<button>返回</button>
 		 </a>
+         <div id="version">
+            <p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
+        </div>
     </body>
 </html>
