--- a/employee/查看請假紀錄.html
+++ b/employee/查看請假紀錄.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>祐肯請假系統</title>
-		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+        <title>祐肯請假系統</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
-		<link rel="stylesheet" href="style.css">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<script src="script.js"></script>
+        <img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;">
+		
 	</head>
 	<body>
 		<div id="full">
@@ -21,5 +21,8 @@
 		 <a href="../employee/employee.html">
 			<button>返回</button>
 		 </a>
+		 <div id="version">
+			<p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
+		</div>
   	</body>
 </html>
