--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 				</div>
 			</div>
 			<div id="version">
-				<p>Version: Alpha 0.1.0</p>
-				<p>system builder : 章凱昱 吳岱威</p>
+				<p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
 			</div>
 		</div>
 	</body>
