--- a/employee/請假.html
+++ b/employee/請假.html
@@ -34,17 +34,15 @@
 				</select>
 			</div>
 			<div id="start">
-				<p>
-					開始時間
-				</p>
-				<input name="start" type="datetime-local" id="start"/>
+				<p>開始時間</p>
+				<input name="start_day" type="date" min="2024-01-01" max="5000-12-31"/>
+				<input name="start_time" type="time" min="2024-01-01" max="5000-12-31"/>
 			</div>
 
 			<div id="end">
-				<p>
-					結束時間
-				</p>
-				<input name="end" type="datetime-local" id="end"/>
+				<p>結束時間</p>
+				<input name="end_day" type="date" min="2024-01-01" max="5000-12-31"/>
+				<input name="end_time" type="time" min="2024-01-01" max="5000-12-31"/>
 			</div>
 
 			<br>
