--- a/admin/假單審核.html
+++ b/admin/假單審核.html
@@ -37,7 +37,7 @@
             </div>
         </div>
         <div id="version">
-            <p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
+            <p>Version: Alpha 0.1.0 , System Builder: 章凱昱 吳岱威</p>
         </div>
     </body>
 </html>
