測試假單審核的js

--- a/admin/假單審核 copy.html
+++ b/admin/假單審核 copy.html
@@ -14,24 +14,41 @@
     </head>
     <body>
         <h1>假單審核</h1>
-        <button id="refresh">刷新</button>
         <div id="list">
             <div class="bill">
                 <table>
                     <tr>
-                        <th>員工姓名</th>
+                        <td>現存假單數:</td>
                     </tr>
                     <tr>
-                        <td>2024/12/15/09:00-2024/12/15/19:00</td>
+                        <td></td>
+                        <th id="content">員工姓名</th>
+                        <td></td>
                     </tr>
                     <tr>
-                        <td>假別</td>
+                        <td></td>
+                        <td id="content">2024/12/15/09:00-2024/12/15/19:00</td>
+                        <td></td>
                     </tr>
                     <tr>
-                        <td>流水號</td>
+                        <td></td>
+                        <td id="content">假別</td>
+                        <td></td>
                     </tr>
                     <tr>
-                        <td id="button"><button>拒絕</button><button>核准</button></td>
+                        <td></td>
+                        <td id="content">事由</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td id="content" class="button"><button>拒絕</button><button>核准</button></td>
+                        <td></td>
+                    </tr>
+                    <tr>    
+                        <td><button>上一張</button></td>
+                        <td></td>
+                        <td><button>下一張</button></td>
                     </tr>
                 </table>
             </div>
