改字的大小

--- a/employee/employee.html
+++ b/employee/employee.html
@@ -16,13 +16,21 @@
 	</head>
     <body>
 		<div id="full">
-			<h1>
-				員工請假專區
-			</h1>
+			<h1 style="font-size: 380%; "><b>員工請假專區</b></h1>
+			<div id="Check_in" style="position: relative; right:40%;">
+				<a href="../employee/打卡.html">
+					<button>打卡</button>
+				</a>
+			</div>
+			<div id = "worker_calendar" style="position: relative; left:40%;">
+				<a href="../admin/休假行事曆.html">
+					<button>休假行事曆</button>
+				</a>
+			</div>
 			<div class="btndiv w3-card w3-border" id="viewDataDiv">
 				<a href="../employee/查看請假紀錄.html">
 					<button class="menubtn" id="viewdata">
-						<span>請假紀錄</span>
+						<span style="font-size: 200%;">請假紀錄</span> 
 						<img class="menubtni" src="../img/viewdata.jpg" alt="buttonpng" />
 					</button>
 				</a>
@@ -30,19 +38,9 @@
 			<div class="btndiv w3-card w3-border" id="newDayOffDiv">
 				<a href="../employee/請假.html">
 					<button class="menubtn" id="newdayoff">
-					<span>請假</span>
+					<span style="font-size: 200%;">請假</span>
 					<img class="menubtni" src="../img/newdayoff.jpg" alt="buttonpng" />
 				</button>
-				</a>
-			</div>
-			<div id = "worker_calendar">
-				<a href="../admin/休假行事曆.html">
-					<button>休假行事曆</button>
-				</a>
-			</div>
-			<div id="Check_in">
-				<a href="../employee/打卡.html">
-					<button>打卡</button>
 				</a>
 			</div>
 		</div>
