--- a/admin/假單審核.html
+++ b/admin/假單審核.html
@@ -14,27 +14,42 @@
     </head>
     <body>
         <h1>假單審核</h1>
-        <button id="refresh">刷新</button>
         <div id="list">
-            <div class="bill">
                 <table>
                     <tr>
-                        <th>員工姓名</th>
+                        <th colspan="3" id="number">流水號:0</th>
                     </tr>
                     <tr>
-                        <td>2024/12/15/09:00-2024/12/15/19:00</td>
+                        <th></th>
+                        <td id="woker_name">員工姓名</td>
+                        <th></th>
                     </tr>
                     <tr>
-                        <td>假別</td>
+                        <th></th>
+                        <td id="leave">假別</td>
+                        <th></th>
                     </tr>
                     <tr>
-                        <td>流水號</td>
+                        <th></th>
+                        <td id="reason">事由</td>
+                        <th></th>
                     </tr>
                     <tr>
-                        <td id="button"><button>拒絕</button><button>核准</button></td>
+                        <th></th>
+                        <td id="time">2024/12/15/15:00-2024/12/15/18:00</td>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <th class="btn"><button class="yes" id="0">核准</button></th>
+                        <th></th>
+                        <th class="btn"><button class="no" id="0">拒絕</button></th>
+                    </tr>
+                    <tr>
+                        <th class="btn"><button id="Previous">上一個</button></th>
+                        <th></th>
+                        <th class="btn"><button id="next">下一個</button></th>
                     </tr>
                 </table>
-            </div>
         </div>
         <div id="version">
             <p>Version: Alpha 0.1.0 , System Builder: 章凱昱 吳岱威</p>
