價單審和側四

--- a/admin/假單審核.html
+++ b/admin/假單審核.html
@@ -40,14 +40,14 @@
                     <th></th>
                 </tr>
                 <tr>
-                    <th class="btn"><button class="yes" id="0" onclick="核准()">核准</button></th>
+                    <th class="btn"><button class="yes" id="0" onclick="yes()">核准</button></th>
                     <th></th>
-                    <th class="btn"><button class="no" id="0" onclick="拒絕()">拒絕</button></th>
+                    <th class="btn"><button class="no" id="0" onclick="no()">拒絕</button></th>
                 </tr>
                 <tr>
-                    <th class="btn"><button id="previous" onclick="上一個()">上一個</button></th>
+                    <th class="btn"><button id="previous" onclick="previous()">上一個</button></th>
                     <th></th>
-                    <th class="btn"><button id="next" onclick="下一個()">下一個</button></th>
+                    <th class="btn"><button id="next" onclick="next()">下一個</button></th>
                 </tr>
             </table>
     </div>
