--- a/admin/假單審核.html
+++ b/admin/假單審核.html
@@ -40,6 +40,11 @@
                     <th></th>
                 </tr>
                 <tr>
+                    <th></th>
+                    <td>待審核</td>
+                    <th></th>
+                </tr>
+                <tr>
                     <th class="btn"><button class="yes" id="0" onclick="yes()">核准</button></th>
                     <th></th>
                     <th class="btn"><button class="no" id="0" onclick="no()">拒絕</button></th>
