--- a/admin/假單審核.html
+++ b/admin/假單審核.html
@@ -45,9 +45,9 @@
                     <th></th>
                 </tr>
                 <tr>
-                    <th class="btn"><button class="yes" id="0" onclick="yes()">核准</button></th>
+                    <th class="btn"><button onclick="yes()">核准</button></th>
                     <th></th>
-                    <th class="btn"><button class="no" id="0" onclick="no()">拒絕</button></th>
+                    <th class="btn"><button onclick="no()">拒絕</button></th>
                 </tr>
                 <tr>
                     <th class="btn"><button id="previous" onclick="previous()">上一個</button></th>
