--- a/admin/假單審核.html
+++ b/admin/假單審核.html
@@ -17,7 +17,8 @@
         <div id="list">
             <table>
                 <tr>
-                    <th colspan="3" id="number">流水號 : 0</th>
+                    <th>流水號:</th>
+                    <th colspan="2" id="number">0</th>
                 </tr>
                 <tr>
                     <th></th>
