--- a/admin/員工請假資訊.html
+++ b/admin/員工請假資訊.html
@@ -13,6 +13,9 @@
     </head>
 
     <body>
+        <div class=""></div>
+
+
         <h1>查詢員工請假時數</h1>
         <div id="search">
             <input placeholder="員工編號" id="code" class="search">
