--- a/admin/adminMainPage.html
+++ b/admin/adminMainPage.html
@@ -8,31 +8,39 @@
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
-        <img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;">
 		<link rel="stylesheet" href="../css/admin.css">
 	</head>
     <body>
-        
-		<h1>
-            請假系統管理平台
-        </h1>
-		<a href = "../admin/員工資料維護.html">
-			<button class="button">員工資料維護</button>
-		</a>
-		<br>
-	    <a href = "../admin/員工請假資訊.html">
-			<button class="button">員工請假資訊</button>
-		</a>
-		<br>
-	    <a href = "../admin/假單審核.html">
-			<button class="button">假單審核</button>
-		</a>
-		<br>
-		<a href = "../admin/休假行事曆.html">
-			<button class="button">休假行事曆</button>
-		</a>
-		<div id="version">
-			<p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
+		<div class="wrapper">
+			
+			<header class="header">
+				<span class="title">請假系統管理平台</span>
+				<span><img class="img" src="../img/logo.png"></span>
+			</header>
+
+			<br>
+
+			<div class="main">
+				<a href = "../admin/員工資料維護.html"></a>
+					<button class="button">員工資料維護</button>
+				</a>
+				<br>
+				<a href = "../admin/員工請假資訊.html">
+					<button class="button">員工請假資訊</button>
+				</a>
+				<br>
+				<a href = "../admin/假單審核.html">
+					<button class="button">假單審核</button>
+				</a>
+				<br>
+				<a href = "../admin/休假行事曆.html">
+					<button class="button">休假行事曆</button>
+				</a>
+			</div>
+
+			<footer class="footer">
+				<small>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</small>
+			</footer>
 		</div>
     </body>
 </html>
