美編做完了

--- a/admin/adminMainPage.html
+++ b/admin/adminMainPage.html
@@ -21,19 +21,19 @@
 			<br>
 
 			<div class="main">
-				<a href = "../admin/員工資料維護.html"></a>
+				<a href = "./員工資料維護.html"></a>
 					<button class="button">員工資料維護</button>
 				</a>
 				<br>
-				<a href = "../admin/員工請假資訊.html">
+				<a href = "./員工請假資訊.html">
 					<button class="button">員工請假資訊</button>
 				</a>
 				<br>
-				<a href = "../admin/假單審核.html">
+				<a href = "./假單審核.html">
 					<button class="button">假單審核</button>
 				</a>
 				<br>
-				<a href = "../admin/休假行事曆.html">
+				<a href = "./休假行事曆.html">
 					<button class="button">休假行事曆</button>
 				</a>
 			</div>
