--- a/admin/假單審核.html
+++ b/admin/假單審核.html
@@ -22,13 +22,12 @@
             <aside>
                 <nav>
                     <ul>
-                        <li><a href="../admin/員工資料維護.html">員工資料維護</a></li>
-                        <li><a href="../admin/員工請假資訊.html">員工請假資訊</a></li>
-                        <li><a href="../admin/假單審核.html">假單審核</a></li>
-                        <li><a href="../admin/休假行事曆.html">休假行事曆</a></li>
+                        <li><a href="./員工資料維護.html">員工資料維護</a></li>
+                        <li><a href="./員工請假資訊.html">員工請假資訊</a></li>
+                        <li><a href="./假單審核.html">假單審核</a></li>
+                        <li><a href="./休假行事曆.html">休假行事曆</a></li>
                     </ul> 
                 </nav>
-                
             </aside>
 
             <div id="list">
