--- a/employee/打卡.html
+++ b/employee/打卡.html
@@ -13,18 +13,36 @@
     </head>
 
     <body>
-        <h1>打卡</h1>
-        <div id="start_work">
-            <button>上班打卡</button>
+        <div class="wrapper">
+
+            <header class="header">
+                <span class="title">打卡</span>
+                <span><img class="img" src="../img/logo.png"></span>
+            </header>
+
+            <aside>
+                <nav>
+                    <ul>
+                        <li><a href="./打卡.html">打卡</a></li>
+                        <li><a href="./休假行事曆.html">休假行事曆</a></li>
+                        <li><a href="./查看請假紀錄.html">查看請假紀錄</a></li>
+                        <li><a href="./請假.html">請假</a></li>
+                    </ul> 
+                </nav>
+            </aside>
+
+            <div class="main">
+                <div id="start_work">
+                    <button>上班打卡</button>
+                </div>
+                <div id="off_work">
+                    <button>下班打卡</button>
+                </div>
+            </div>
         </div>
-        <div id="off_work">
-            <button>下班打卡</button>
-        </div>
-        <a href="../employee/employee.html">
-			<button>返回</button>
-		 </a>
-         <div id="version">
-            <p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
-        </div>
+        
+        <footer class="footer">
+			<small>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</small>
+		</footer>
     </body>
 </html>
