--- a/employee/查看請假紀錄.html
+++ b/employee/查看請假紀錄.html
@@ -9,20 +9,35 @@
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
         <img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;">
+		<link rel="stylesheet" href="../css/查看請假紀錄.css">
 		
 	</head>
 	<body>
-		<div id="full">
-			<h1>
-				員工請假專區
-			</h1>
+		<div class="wrapper">
+
+			<header class="header">
+                <span class="title">查看請假紀錄</span>
+                <span><img class="img" src="../img/logo.png"></span>
+            </header>
+
+            <aside>
+                <nav>
+                    <ul>
+                        <li><a href="./打卡.html">打卡</a></li>
+                        <li><a href="./休假行事曆.html">休假行事曆</a></li>
+                        <li><a href="./查看請假紀錄.html">查看請假紀錄</a></li>
+                        <li><a href="./請假.html">請假</a></li>
+                    </ul> 
+                </nav>
+            </aside>
+
+			<div class="main">
+				00
+			</div>
 		</div>
-		 <br>
-		 <a href="../employee/employee.html">
-			<button>返回</button>
-		 </a>
-		 <div id="version">
-			<p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
-		</div>
+
+		<footer class="footer">
+			<small>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</small>
+		</footer>
   	</body>
 </html>
