--- a/admin/休假行事曆.html
+++ b/admin/休假行事曆.html
@@ -8,120 +8,136 @@
 		<link rel="icon" type="image/x-icon" href="../img/logo.ico">
         <script src="../js/jquery-3.7.1.min.js"></script>
         <script src="../js/cookieOperation.js"></script>
-        <img src="../img/logo.png" style="position: fixed;right: 1%;top: 1%;width: 15%;">
         <link rel="stylesheet" href="../css/休假行事曆.css">
         <script src="../js/休假行事曆.js"></script> 
     </head>
     <body>
-        <h1>休假行事曆</h1>
-        <div class="calendar">
-            <table>
-                <tr>
-                    <th scope="row" colspan="7">
-                        <div class="year_picker">
-                            <span class="year_change" id="prev_year">
-                                <pre><</pre>
-                            </span>
-                            <span id="year">2024</span>
-                            <span class="year_change" id="next_year">
-                                <pre>></pre>
-                            </span>
-                        </div>
-                    </th>
-                </tr>
-                <tr>
-                    <th scope="row" colspan="7">
-                        <span class="month_picker" id="month_picker">2月</span>
-                    </th>
-                </tr>
-                <tr>
-                    <th>日</th>
-                    <th>一</th>
-                    <th>二</th>
-                    <th>三</th>
-                    <th>四</th>
-                    <th>五</th>
-                    <th>六</th>
-                </tr>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </table>
-            <a href="../admin/adminMainPage.html">
-                <button>返回</button>
-             </a>
+        <div class="wrapper">
+
+            <header class="header">
+                <span class="title">休假行事曆</span>
+                <span><img class="img" src="../img/logo.png"></span>
+            </header>
+
+            <aside>
+                <nav>
+                    <ul>
+                        <li><a href="./員工資料維護.html">員工資料維護</a></li>
+                        <li><a href="./員工請假資訊.html">員工請假資訊</a></li>
+                        <li><a href="./假單審核.html">假單審核</a></li>
+                        <li><a href="./休假行事曆.html">休假行事曆</a></li>
+                    </ul>
+                </nav>
+            </aside>
+            <br>
+            <div class="calendar">
+                <table>
+                    <tr>
+                        <th scope="row" colspan="7">
+                            <div class="year_picker">
+                                <span class="year_change" id="prev_year">
+                                    <pre><</pre>
+                                </span>
+                                <span id="year">2024</span>
+                                <span class="year_change" id="next_year">
+                                    <pre>></pre>
+                                </span>
+                            </div>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th scope="row" colspan="7">
+                            <span class="month_picker" id="month_picker">2月</span>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th>日</th>
+                        <th>一</th>
+                        <th>二</th>
+                        <th>三</th>
+                        <th>四</th>
+                        <th>五</th>
+                        <th>六</th>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
+
         </div>
-        <div id="version">
-            <p>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</p>
-        </div>
+
+        <footer class="footer">
+            <small>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</small>
+        </footer>
     </body>
 </html>
