修正主業按鈕會被版本號擋住的問題

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<div class="wrapper">
 			<div class="fullscreen">
-				<div class="field">
+				<div class="field"></div>
 					<h1>
 						祐肯企業<br>請假系統
 					</h1>
@@ -31,11 +31,7 @@
 			</div>
 		</div>
 		
-		<footer class="footer">
-			<div id="version">
-				<small>Version: Alpha 0.1.0 , system builder : 章凱昱 吳岱威</small>
-			</div>
-		</footer>
+		
 	</body>
 	
 </html>
